Trying to fix white space 4

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -9,7 +9,7 @@
 body,
 html,
 #root {
-    height: 100%;
+    min-height: 100%;
 }
 
 #root {
